update storehouse handler
